@@ -435,6 +435,17 @@
     the first characters of a common action (such as
     <guilabel>Deposit</guilabel>), GnuCash will fill in the rest.</para>
 
+    <para>The <guilabel>Transfer</guilabel> field supports QuickFill
+    of account names.  You can start typing an account name and
+    GnuCash will fill in the remaining part of the name.  Typing the
+    separator character at any time will complete the current level of
+    the account name, leaving the cursor positioned to start the next
+    level of account name.  For example, typing "A:C" with the
+    standard set of account names will complete to the
+    "Assets:Checking" account.  You can also type the
+    <keycap>Menu</keycap> or <keycap>Ctrl-Down</keycap> keys in this
+    field to pop up a list of all account names.</para>
+
     <para>In any of the amount fields, you can use a built-in calculator.
     Simply type in the first value, followed by <keycap>+</keycap>,
     <keycap>-</keycap>, <keycap>*</keycap>, or <keycap>/</keycap>, then type
