@@ -1,9 +1,12 @@
 2006-08-14  David Hampton  <hampton@employees.org>
 
+	* guide/C/ch_txns.xml: Add some text to the "Entry Shortcuts"
+	section for the Transfer field. Fixes #343244 (part 2).
+
 	* guide/C/ch_txns.xml:
 	* guide/C/ch_basics.xml: Update the text to distinguish between
 	access (underlined) keys and actual menu shortcuts (listed at the
-	end of a menu item).
+	end of a menu item). Fixes #343244 (part 1).
 
 2006-07-09  Chris Lyttle  <chris@wilddev.net>
 
